jtrent238's HammerMod ChangeLog

1.0.1.1
- Added Cactus Hammer
- Added Gravel Hammer
- Added Silver Hammer
- Added Wool Hammer (White)
- Added Tungsten Hammer
- Added Ruby Hammer
- Added Emerald Hammer
- Added Tin Hammer
- Changed Wood Hammer Texture

1.0.1.0
- Added Bronze Hammer
- Added Creeper Hammer
- Added Pig Hammer
- Added Dirt Hammer
- Added Glass Hammer
- Added Sand Hammer
- Added Crafting Recipe for Copper Hammer
- Fixed Wood Hammer
- Fixed Stone Hammer
- Fixed Iron Hammer
- Fixed Gold Hammer
- Fixed Diamond Hammer
- Fixed Copper Hammer


1.0.0.0
- Added Wood Hammer
- Added Stone Hammer
- Added Iron Hammer
- Added Gold Hammer
- Added Diamond Hammer
- Added Copper Hammer