@@ -1,0 +1,16 @@
+package com.jtrent238.hammermod.items.hammers;
+
+import net.minecraft.item.Item.ToolMaterial;
+
+public class ItemSilverHammer  extends ItemBaseHammer{
+
+
+	public ItemSilverHammer(ToolMaterial material) {
+		super(material);
+	}
+
+
+
+
+	
+}
